<resources>
    <string name="app_name">Parks</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="parks">Parks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="TextView">text</string>

    <string name="operating_hours">Operating Hours</string>

    <string name="enterance_fees">Enterance Fees</string>
  >
    <string name="activities">Activities</string>
    <string name="topics">Topics</string>

    <string name="directions">Directions</string>

</resources>