<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".details_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:paddingBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_parkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/details_parkDsignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView" />

            <androidx.viewpager2.widget.ViewPager2
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/detail_viewPager"
                android:layout_width="match_parent"
                android:layout_height="225dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:text="@string/TextView" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities" />

            <TextView
                android:id="@+id/detail_activites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView" />

            <TextView
                android:id="@+id/details_activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topics" />

            <TextView
                android:id="@+id/detail_topics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterance_fees" />

            <TextView
                android:id="@+id/enterance_fees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operating_hours" />

            <TextView
                android:id="@+id/operating_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directions" />

            <TextView
                android:id="@+id/directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>